feat: redeem_delay and cp quoting
